Fixed phase state being stuck at victory page.

--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -6,39 +6,3 @@ body {
   height: 100%;
   overflow: hidden;
 }
-
-.title {
-  background-image: url(titleBG.png);
-  height: 100%;
-  background-position: center;
-  background-repeat: no-repeat;
-  background-size: cover;
-}
-
-.winner {
-  background-image: url(winner.jpeg);
-  height: 100%;
-  background-position: center;
-  background-repeat: no-repeat;
-  background-size: cover;
-}
-
-.loser {
-  background-image: url(loser.jpeg);
-  height: 100%;
-  background-position: center;
-  background-repeat: no-repeat;
-  background-size: cover;
-}
-
-.rules {
-  background-image: url(rules.jpeg);
-  height: 100%;
-  background-position: center;
-  background-repeat: no-repeat;
-  background-size: cover;
-}
-
-#destroyer1 {
-  background-color: black;
-}
